testdata/baselines/reference/submodule/compiler/duplicateLocalVariable4.errors.txt
duplicateLocalVariable4.ts(6,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' must be of type '{ readonly [x: number]: string; readonly a: E.a; }', but here has type 'E.a'.


==== duplicateLocalVariable4.ts (1 errors) ====
    enum E{
    a
    }
     
    var x = E;
    var x = E.a;
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' must be of type '{ readonly [x: number]: string; readonly a: E.a; }', but here has type 'E.a'.
!!! related TS6203 duplicateLocalVariable4.ts:5:5: 'x' was also declared here.